acertando arquivos para configuração da box

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
-composer.lock
-composer.phar
-composer
+#composer.lock
+#composer.phar
+#composer
 .idea
 nbproject
 *.pyc
 www.pid
 vagrant*
 .vagrant/
-!/composer.phar
+#!/composer.phar
 *.*~
 *~
-vendor/*
+#vendor/*
 config/settings_local.php
 /node_modules
 web/.htaccess
