acertando configuração do ngnix

--- a/server-confs/hackathon.conf
+++ b/server-confs/hackathon.conf
@@ -1,7 +1,7 @@
 server {
 
     listen 80;
-    server_name 10.0.0.40;
+    server_name _;
 
     root /home/vagrant/hackathon/web;
     index index.php;
