acertando configuração de máquina

--- a/bower.json
+++ b/bower.json
@@ -19,5 +19,8 @@
   "dependencies": {
     "material-design-lite": "~1.0.2",
     "angular-material": "~0.10.0"
+  },
+  "resolutions": {
+    "angular": "~1.4.4"
   }
 }
